# material-candidate-explorer

./: .gitignore  MATERIAL_CANDIDATE_DISCOVERY_T4.ipynb  MATERIAL_CANDIDATE_EXPLORER_V11_PROMPT_RAG_REAL_GENERATION.ipynb  README.md  bootstrap.ps1  bootstrap.sh  pyproject.toml  start-sidecars.ps1  start-sidecars.sh
docs/: CONTROL_SWEEP_AND_RANKING.md  DEPENDENCIES.md  DOMAIN_MATERIAL_WORKFLOWS.md  EXPERT_API_CONTRACT.md  FUSION_CORE.md  GENOMIC_ALPHAGENOME.md  LITERATURE_RAG.md  MCP_RAG.md  MODEL_CONTRACT.md  RESEARCH_FOUNDATIONS.md  SIDECARS.md  STAGE_AWARE_MULTI_RAG.md  STAGE_VALIDATION_EVIDENCE.md  VALIDATION_MATRIX.md
integrations/: README.md  literature-rag.env.example  manifest.v1.json  manual-checkpoints.env.example.ps1  qhnet.water.config.example.json
scripts/: bootstrap.py  exec_bound_sidecar.py
tests/: conftest.py  test_alphagenome.py  test_boltz_sidecar.py  test_checkpoint_binding.py  test_chemistry_generators_and_rdkit.py  test_configured_fusion_and_routes.py  test_crystal_identity.py  test_crystal_identity_relations.py  test_engine_and_cli.py  test_evidence_fusion.py  test_fusion_adapters.py  test_fusion_core.py  test_fusion_exploration.py  test_fusion_loop.py  test_fusion_metrics_regressions.py  test_fusion_search.py  test_generator_sidecar_contract.py  test_integration_manifest_and_bootstrap.py  test_literature_rag.py  test_material_domains.py  test_materials_screening.py  test_mattergen_contract.py  test_mcp_client.py  test_mlip_reliability.py  test_model_adapters.py  test_novelty_and_dft_handoff.py  test_profiles_and_experimental.py  (+11 more)
(+60 files in other folders)
