[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "discovery-os"
version = "0.4.0"
description = "Model-agnostic orchestration for evidence-driven material discovery"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "pydantic>=2.10,<3",
  "requests>=2.31,<3",
]

[project.optional-dependencies]
chem = ["rdkit>=2023.9"]
sidecar = ["fastapi==0.139.0", "uvicorn==0.51.0"]
dev = ["pytest>=8,<10", "httpx2==2.6.0"]
genomics = ["alphagenome @ git+https://github.com/google-deepmind/alphagenome.git"]

[project.scripts]
discovery-os = "discovery_os.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/discovery-os/integrations" = ["integrations/manifest.v1.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
